Fix overflow of logo on mobile devices

--- a/resources/assets/sass/_header.scss
+++ b/resources/assets/sass/_header.scss
@@ -164,6 +164,10 @@
     .logo {
         order: 2;
         text-align: center;
+
+        img {
+            max-width: 100%;
+        }
     }
 
     .links {
